new config for db
